--- a/Basilisk/Chat/Messages/MessageGroupHeader.xib
+++ b/Basilisk/Chat/Messages/MessageGroupHeader.xib
@@ -47,7 +47,7 @@
                             <rect key="frame" x="148" y="12" width="19" height="14"/>
                             <textFieldCell key="cell" lineBreakMode="clipping" title="1m" id="SKE-dN-ME7">
                                 <font key="font" metaFont="smallSystem"/>
-                                <color key="textColor" name="tertiaryLabelColor" catalog="System" colorSpace="catalog"/>
+                                <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
